--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
-<html lang="da">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Movie ID Finder</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Movie ID Finder</title>
+<style>
+body { font-family: Arial; max-width: 600px; margin:auto; padding:20px; }
+input { width:100%; padding:10px; font-size:16px; }
+.movie { border-bottom:1px solid #ccc; padding:10px 0; }
+</style>
 </head>
 <body>
 
-<h1>🎬 Movie ID Finder</h1>
-<p>Søg film og få IMDb + TMDB ID (uden API)</p>
+<h2>Movie ID Finder</h2>
+<input id="q" placeholder="Søg film">
 
-<input id="search" placeholder="Søg fx: Crank">
-
-<div id="status">Indlæser filmdatabasen…</div>
 <div id="results"></div>
 
-<script src="script.js"></script>
+<script>
+const API_KEY = "b7a512be09653a21e9b9cc99a026ae46";
+
+q.oninput = async () => {
+  results.innerHTML = "";
+  if (q.value.length < 2) return;
+
+  const res = await fetch(
+    `https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${q.value}`
+  );
+  const data = await res.json();
+
+  for (const m of data.results) {
+    const d = await fetch(
+      `https://api.themoviedb.org/3/movie/${m.id}?api_key=${API_KEY}`
+    ).then(r => r.json());
+
+    results.innerHTML += `
+      <div class="movie">
+        <b>${m.title}</b><br>
+        TMDB ID: ${m.id}<br>
+        IMDb ID: ${d.imdb_id || "N/A"}
+      </div>
+    `;
+  }
+};
+</script>
+
 </body>
 </html>
