--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Movie ID Finder</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
     color: #ffffff;
     display: flex;
@@ -19,21 +20,28 @@
   h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #1da1f2;
   }
 
   input {
     width: 100%;
     max-width: 400px;
-    padding: 10px;
+    padding: 12px 15px;
     font-size: 16px;
-    border-radius: 5px;
+    border-radius: 8px;
     border: none;
     margin-bottom: 30px;
+    background-color: #1e1e1e;
+    color: #ffffff;
+  }
+
+  input:focus {
+    outline: 2px solid #1da1f2;
   }
 
   #results {
     width: 100%;
-    max-width: 600px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -45,43 +53,79 @@
     align-items: center;
     background-color: #1e1e1e;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 12px;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .movie:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
   }
 
   .movie img {
     width: 80px;
-    border-radius: 5px;
+    border-radius: 8px;
   }
 
   .movie-info {
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
 
   .movie-info b {
     font-size: 18px;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
   }
 
   .movie-info span {
     font-size: 14px;
     color: #cccccc;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .copy-btn {
+    background-color: #1da1f2;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    padding: 2px 6px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  .copy-btn:hover {
+    background-color: #0d8ddb;
   }
 
   footer {
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
     font-size: 14px;
     color: #888888;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
   }
 
   footer a {
     color: #1da1f2;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
   }
 
   footer a:hover {
     text-decoration: underline;
+  }
+
+  .github-logo {
+    font-size: 18px;
   }
 </style>
 </head>
@@ -93,7 +137,9 @@
 <div id="results"></div>
 
 <footer>
-  <div>Visit my GitHub: <a href="https://github.com/murdervan" target="_blank">github.com/murdervan</a></div>
+  <a href="https://github.com/murdervan" target="_blank">
+    <i class="fab fa-github github-logo"></i> Visit my GitHub
+  </a>
   <div>Your visit count: <span id="counter">0</span></div>
 </footer>
 
@@ -109,6 +155,13 @@ let visits = localStorage.getItem("visits") || 0;
 visits++;
 localStorage.setItem("visits", visits);
 counter.textContent = visits;
+
+// Copy ID function
+function copyToClipboard(id) {
+  navigator.clipboard.writeText(id).then(() => {
+    alert(`Copied: ${id}`);
+  });
+}
 
 q.oninput = async () => {
   results.innerHTML = "";
@@ -133,8 +186,8 @@ q.oninput = async () => {
         <img src="${poster}" alt="${m.title}">
         <div class="movie-info">
           <b>${m.title}</b>
-          <span>TMDB ID: ${m.id}</span>
-          <span>IMDb ID: ${d.imdb_id || "N/A"}</span>
+          <span>TMDB ID: ${m.id} <button class="copy-btn" onclick="copyToClipboard('${m.id}')">Copy</button></span>
+          <span>IMDb ID: ${d.imdb_id || "N/A"} ${d.imdb_id ? `<button class="copy-btn" onclick="copyToClipboard('${d.imdb_id}')">Copy</button>` : ""}</span>
         </div>
       </div>
     `;
