--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     transition: background-color 0.3s, color 0.3s;
   }
 
-  /* Dark/light toggle button */
   #toggle-mode {
     position: fixed;
     top: 20px;
@@ -53,26 +52,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 20px 20px 20px; /* top padding for toggle */
+    padding: 100px 20px 20px 20px; /* plads til toggle */
   }
 
-  /* Header area */
   .header-area {
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin-bottom: 20px;
+    gap: 20px;
+    margin-bottom: 30px;
   }
 
   .header-area img {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     object-fit: contain;
   }
 
   .header-area h2 {
+    font-size: 36px;
     margin: 0;
-    font-size: 28px;
     color: var(--tmdb-color);
   }
 
@@ -83,14 +81,12 @@
     font-size: 16px;
     border-radius: 8px;
     border: none;
-    margin-bottom: 0;
     background-color: var(--card-bg);
     color: var(--text-color);
   }
 
   input:focus { outline: 2px solid var(--tmdb-color); }
 
-  /* Autocomplete dropdown */
   #autocomplete-list {
     width: 100%;
     max-width: 500px;
@@ -136,23 +132,11 @@
     transition: transform 0.2s, box-shadow 0.2s;
   }
 
-  .movie:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-  }
+  .movie:hover { transform: translateY(-2px); box-shadow: 0 4px 15px rgba(0,0,0,0.4); }
 
-  .movie img {
-    width: 100px;
-    border-radius: 8px;
-    flex-shrink: 0;
-  }
+  .movie img { width: 100px; border-radius: 8px; flex-shrink: 0; }
 
-  .movie-info {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    flex-grow: 1;
-  }
+  .movie-info { display: flex; flex-direction: column; gap: 8px; flex-grow: 1; }
 
   .movie-info b { font-size: 20px; color: var(--tmdb-color); }
   .movie-info p { font-size: 14px; color: #ccc; margin: 4px 0; }
@@ -160,48 +144,16 @@
   .badges { display: flex; gap: 6px; flex-wrap: wrap; }
   .badge { background-color: var(--badge-bg); padding: 2px 6px; border-radius: 6px; font-size: 12px; color: var(--text-color); }
 
-  .id-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--badge-bg);
-    padding: 8px 12px;
-    border-radius: 8px;
-    font-size: 14px;
-    gap: 10px;
-    border: 2px solid transparent;
-    transition: border 0.2s, background-color 0.2s;
-  }
-
+  .id-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--badge-bg); padding: 8px 12px; border-radius: 8px; font-size: 14px; gap: 10px; border: 2px solid transparent; transition: border 0.2s, background-color 0.2s; }
   .id-box a { color: var(--text-color); text-decoration: none; font-weight: bold; }
   .tmdb { border-color: var(--tmdb-color); }
   .imdb { border-color: var(--imdb-color); }
 
-  .copy-btn {
-    background-color: var(--tmdb-color);
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    padding: 2px 6px;
-    font-size: 12px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
-
+  .copy-btn { background-color: var(--tmdb-color); border: none; border-radius: 4px; color: #fff; padding: 2px 6px; font-size: 12px; cursor: pointer; transition: background-color 0.2s; }
   .copy-btn:hover { background-color: #0d8ddb; }
   .copy-btn.copied { background-color: #2ecc71 !important; }
 
-  footer {
-    margin-top: 50px;
-    width: 100%;
-    background-color: var(--card-bg);
-    padding: 30px 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-top: 2px solid #333;
-  }
-
+  footer { margin-top: 50px; width: 100%; background-color: var(--card-bg); padding: 30px 40px; display: flex; flex-direction: column; align-items: center; border-top: 2px solid #333; }
   footer h3 { margin: 0 0 10px 0; color: var(--tmdb-color); }
   footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
   footer a { color: var(--tmdb-color); text-decoration: none; margin-top: 10px; }
@@ -254,7 +206,7 @@ function copyToClipboard(id, button) {
   setTimeout(() => { button.textContent = "Copy"; button.classList.remove("copied"); }, 1500);
 }
 
-// Live autocomplete + search
+// Live autocomplete
 q.addEventListener("input", async () => {
   autocompleteList.innerHTML = "";
   results.innerHTML = "";
@@ -264,23 +216,19 @@ q.addEventListener("input", async () => {
   const res = await fetch(`https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${encodeURIComponent(query)}`);
   const data = await res.json();
 
-  // Autocomplete items
   data.results.slice(0,5).forEach(movie => {
     const item = document.createElement("div");
     item.classList.add("autocomplete-item");
     item.textContent = movie.title;
     item.addEventListener("click", () => {
-      q.value = movie.title;
       autocompleteList.innerHTML = "";
       displayMovie(movie.id);
     });
     autocompleteList.appendChild(item);
   });
-
-  // Display first result
-  if(data.results.length > 0 && document.activeElement === q) displayMovie(data.results[0].id);
 });
 
+// Display movie details
 async function displayMovie(id) {
   const d = await fetch(`https://api.themoviedb.org/3/movie/${id}?api_key=${API_KEY}`).then(r => r.json());
   const poster = d.poster_path ? `https://image.tmdb.org/t/p/w200${d.poster_path}` : "https://via.placeholder.com/100x150?text=No+Image";
@@ -313,5 +261,6 @@ async function displayMovie(id) {
 
 </body>
 </html>
+
 
 
