--- a/index.html
+++ b/index.html
@@ -5,117 +5,78 @@
 <title>Movie ID Finder</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-  :root {
-    --bg-color: #121212;
-    --text-color: #ffffff;
-    --card-bg: #1e1e1e;
-    --tmdb-color: #1da1f2;
-    --imdb-color: #f1c40f;
-    --badge-bg: #2a2a2a;
-  }
-
-  body.light {
-    --bg-color: #f5f5f5;
-    --text-color: #121212;
-    --card-bg: #ffffff;
-    --tmdb-color: #1da1f2;
-    --imdb-color: #f1c40f;
-    --badge-bg: #e0e0e0;
-  }
-
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    margin: 0;
-    padding: 0;
-    transition: background-color 0.3s, color 0.3s;
-  }
-
-  #toggle-mode {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
-    padding: 6px 12px;
-    border-radius: 6px;
-    border: none;
-    font-weight: bold;
-    background-color: var(--tmdb-color);
-    color: #fff;
-    transition: background-color 0.3s;
-    z-index: 1000;
-  }
-  #toggle-mode:hover { background-color: #0d8ddb; }
-
-  main {
+    background-color: #121212;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px 20px 20px 20px; /* plads til toggle */
+    min-height: 100vh;
+    padding: 40px 20px;
+    justify-content: flex-start;
   }
 
-  .header-area {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 30px;
-  }
-
-  .header-area img {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-  }
-
-  .header-area h2 {
-    font-size: 36px;
-    margin: 0;
-    color: var(--tmdb-color);
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #1da1f2;
   }
 
   input {
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
     padding: 12px 15px;
     font-size: 16px;
     border-radius: 8px;
     border: none;
-    background-color: var(--card-bg);
-    color: var(--text-color);
+    margin-bottom: 10px;
+    background-color: #1e1e1e;
+    color: #ffffff;
   }
 
-  input:focus { outline: 2px solid var(--tmdb-color); }
+  input:focus {
+    outline: 2px solid #1da1f2;
+  }
 
   #autocomplete-list {
     width: 100%;
-    max-width: 500px;
-    background-color: var(--card-bg);
+    max-width: 400px;
+    background-color: #1e1e1e;
     border: 1px solid #333;
-    border-top: none;
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px;
     position: absolute;
+    top: 72px; /* just under input */
     z-index: 999;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
     overflow: hidden;
+    display: none;
+    flex-direction: column;
   }
 
   .autocomplete-item {
-    padding: 8px 12px;
+    display: flex;
+    gap: 10px;
+    padding: 5px 10px;
     cursor: pointer;
+    align-items: center;
     transition: background 0.2s;
   }
 
+  .autocomplete-item img {
+    width: 40px;
+    height: 60px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+
   .autocomplete-item:hover {
-    background-color: var(--tmdb-color);
+    background-color: #1da1f2;
     color: #fff;
   }
 
   #results {
     width: 100%;
-    max-width: 800px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -126,141 +87,179 @@
     display: flex;
     gap: 20px;
     align-items: flex-start;
-    background-color: var(--card-bg);
+    background-color: #1e1e1e;
     padding: 15px;
     border-radius: 12px;
     transition: transform 0.2s, box-shadow 0.2s;
   }
 
-  .movie:hover { transform: translateY(-2px); box-shadow: 0 4px 15px rgba(0,0,0,0.4); }
+  .movie:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+  }
 
-  .movie img { width: 100px; border-radius: 8px; flex-shrink: 0; }
+  .movie img {
+    width: 100px;
+    border-radius: 8px;
+    flex-shrink: 0;
+  }
 
-  .movie-info { display: flex; flex-direction: column; gap: 8px; flex-grow: 1; }
+  .movie-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-grow: 1;
+  }
 
-  .movie-info b { font-size: 20px; color: var(--tmdb-color); }
-  .movie-info p { font-size: 14px; color: #ccc; margin: 4px 0; }
+  .movie-info b {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #1da1f2;
+  }
 
-  .badges { display: flex; gap: 6px; flex-wrap: wrap; }
-  .badge { background-color: var(--badge-bg); padding: 2px 6px; border-radius: 6px; font-size: 12px; color: var(--text-color); }
+  .id-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #2a2a2a;
+    padding: 8px 12px;
+    border-radius: 8px;
+    font-size: 14px;
+    gap: 10px;
+    border: 2px solid transparent;
+  }
 
-  .id-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--badge-bg); padding: 8px 12px; border-radius: 8px; font-size: 14px; gap: 10px; border: 2px solid transparent; transition: border 0.2s, background-color 0.2s; }
-  .id-box a { color: var(--text-color); text-decoration: none; font-weight: bold; }
-  .tmdb { border-color: var(--tmdb-color); }
-  .imdb { border-color: var(--imdb-color); }
+  .id-box a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+  }
 
-  .copy-btn { background-color: var(--tmdb-color); border: none; border-radius: 4px; color: #fff; padding: 2px 6px; font-size: 12px; cursor: pointer; transition: background-color 0.2s; }
+  .tmdb { border-color: #1da1f2; }
+  .imdb { border-color: #f1c40f; }
+
+  .copy-btn {
+    background-color: #1da1f2;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    padding: 2px 6px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
   .copy-btn:hover { background-color: #0d8ddb; }
-  .copy-btn.copied { background-color: #2ecc71 !important; }
 
-  footer { margin-top: 50px; width: 100%; background-color: var(--card-bg); padding: 30px 40px; display: flex; flex-direction: column; align-items: center; border-top: 2px solid #333; }
-  footer h3 { margin: 0 0 10px 0; color: var(--tmdb-color); }
-  footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
-  footer a { color: var(--tmdb-color); text-decoration: none; margin-top: 10px; }
+  footer {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 14px;
+    color: #888888;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
+
+  footer a {
+    color: #1da1f2;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
   footer a:hover { text-decoration: underline; }
+  .github-logo { font-size: 18px; }
 </style>
 </head>
 <body>
 
-<button id="toggle-mode">🌙 / ☀️</button>
+<h2>Movie ID Finder</h2>
+<div style="position: relative; width: 100%; max-width: 400px;">
+  <input id="q" placeholder="Search for a movie">
+  <div id="autocomplete-list"></div>
+</div>
 
-<main>
-  <div class="header-area">
-    <img src="https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true" alt="Logo">
-    <h2>Movie ID Finder</h2>
-  </div>
-
-  <div style="position: relative; width: 100%; max-width: 500px;">
-    <input id="q" placeholder="Search for a movie">
-    <div id="autocomplete-list"></div>
-  </div>
-
-  <div id="results"></div>
-</main>
+<div id="results"></div>
 
 <footer>
-  <h3>Movie ID Finder</h3>
-  <p>Find TMDB and IMDb IDs quickly with ratings, genres, and a short overview. Perfect for developers, movie buffs, or anyone needing quick movie references.</p>
-  <a href="https://github.com/murdervan" target="_blank"><i class="fab fa-github"></i> Visit my GitHub</a>
+  <a href="https://github.com/murdervan" target="_blank">
+    <i class="fab fa-github github-logo"></i> Visit my GitHub
+  </a>
+  <div>Your visit count: <span id="counter">0</span></div>
 </footer>
 
 <script>
 const API_KEY = "b7a512be09653a21e9b9cc99a026ae46";
 const q = document.getElementById("q");
 const results = document.getElementById("results");
-const toggleBtn = document.getElementById("toggle-mode");
 const autocompleteList = document.getElementById("autocomplete-list");
+const counter = document.getElementById("counter");
 
-// Dark/light mode
-if(localStorage.getItem("mode") === "light") document.body.classList.add("light");
-toggleBtn.addEventListener("click", () => {
-  document.body.classList.toggle("light");
-  localStorage.setItem("mode", document.body.classList.contains("light") ? "light" : "dark");
-});
+// Visit counter
+let visits = localStorage.getItem("visits") || 0;
+visits++;
+localStorage.setItem("visits", visits);
+counter.textContent = visits;
 
 // Copy ID
-function copyToClipboard(id, button) {
+function copyToClipboard(id) {
   navigator.clipboard.writeText(id);
-  button.textContent = "Copied!";
-  button.classList.add("copied");
-  setTimeout(() => { button.textContent = "Copy"; button.classList.remove("copied"); }, 1500);
 }
 
-// Live autocomplete
+// Autocomplete with images
 q.addEventListener("input", async () => {
   autocompleteList.innerHTML = "";
   results.innerHTML = "";
   const query = q.value.trim();
-  if(query.length < 2) return;
+  if (query.length < 2) { autocompleteList.style.display="none"; return; }
 
   const res = await fetch(`https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${encodeURIComponent(query)}`);
   const data = await res.json();
+  if (!data.results.length) { autocompleteList.style.display="none"; return; }
+
+  autocompleteList.style.display = "flex";
 
   data.results.slice(0,5).forEach(movie => {
     const item = document.createElement("div");
     item.classList.add("autocomplete-item");
-    item.textContent = movie.title;
-    item.addEventListener("click", () => {
-      autocompleteList.innerHTML = "";
-      displayMovie(movie.id);
+    const poster = movie.poster_path ? `https://image.tmdb.org/t/p/w92${movie.poster_path}` : "https://via.placeholder.com/40x60?text=No+Img";
+    item.innerHTML = `<img src="${poster}" alt="${movie.title}"> <span>${movie.title}</span>`;
+    item.addEventListener("click", async () => {
+      autocompleteList.style.display = "none";
+      q.value = movie.title;
+
+      const d = await fetch(`https://api.themoviedb.org/3/movie/${movie.id}?api_key=${API_KEY}`).then(r=>r.json());
+      const fullPoster = d.poster_path ? `https://image.tmdb.org/t/p/w200${d.poster_path}` : "https://via.placeholder.com/100x150?text=No+Image";
+      const tmdbLink = `https://www.themoviedb.org/movie/${d.id}`;
+      const imdbLink = d.imdb_id ? `https://www.imdb.com/title/${d.imdb_id}/` : "#";
+
+      results.innerHTML = `
+        <div class="movie">
+          <img src="${fullPoster}" alt="${d.title}">
+          <div class="movie-info">
+            <b>${d.title}</b>
+            <div class="id-box tmdb">
+              <a href="${tmdbLink}" target="_blank">TMDB ID: ${d.id}</a>
+              <button class="copy-btn" onclick="copyToClipboard('${d.id}')">Copy</button>
+            </div>
+            ${d.imdb_id ? `<div class="id-box imdb">
+              <a href="${imdbLink}" target="_blank">IMDb ID: ${d.imdb_id}</a>
+              <button class="copy-btn" onclick="copyToClipboard('${d.imdb_id}')">Copy</button>
+            </div>` : ''}
+          </div>
+        </div>`;
     });
     autocompleteList.appendChild(item);
   });
 });
-
-// Display movie details
-async function displayMovie(id) {
-  const d = await fetch(`https://api.themoviedb.org/3/movie/${id}?api_key=${API_KEY}`).then(r => r.json());
-  const poster = d.poster_path ? `https://image.tmdb.org/t/p/w200${d.poster_path}` : "https://via.placeholder.com/100x150?text=No+Image";
-  const tmdbLink = `https://www.themoviedb.org/movie/${d.id}`;
-  const imdbLink = d.imdb_id ? `https://www.imdb.com/title/${d.imdb_id}/` : "#";
-  const genreBadges = d.genres?.map(g => `<span class="badge">${g.name}</span>`).join("") || "";
-
-  results.innerHTML = `
-    <div class="movie">
-      <img src="${poster}" alt="${d.title}" loading="lazy">
-      <div class="movie-info">
-        <b>${d.title} (${d.release_date ? d.release_date.slice(0,4) : "N/A"})</b>
-        <div class="badges">${genreBadges}</div>
-        <p>⭐ Rating: ${d.vote_average || "N/A"} | Votes: ${d.vote_count || 0}</p>
-        <p>${d.overview?.slice(0,150) || "No description"}${d.overview?.length > 150 ? "..." : ""}</p>
-        <div class="id-box tmdb">
-          <a href="${tmdbLink}" target="_blank">TMDB ID: ${d.id}</a>
-          <button class="copy-btn" onclick="copyToClipboard('${d.id}', this)">Copy</button>
-        </div>
-        ${d.imdb_id ? `
-        <div class="id-box imdb">
-          <a href="${imdbLink}" target="_blank">IMDb ID: ${d.imdb_id}</a>
-          <button class="copy-btn" onclick="copyToClipboard('${d.imdb_id}', this)">Copy</button>
-        </div>` : ''}
-      </div>
-    </div>
-  `;
-}
 </script>
 
 </body>
 </html>
+
 
 
 
