--- a/index.html
+++ b/index.html
@@ -5,192 +5,199 @@
 <title>Movie ID Finder</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-  :root {
-    --bg-color: #121212;
-    --text-color: #ffffff;
-    --card-bg: #1e1e1e;
-    --tmdb-color: #1da1f2;
-    --imdb-color: #f1c40f;
-    --badge-bg: #2a2a2a;
-  }
+:root {
+  --bg-color: #121212;
+  --text-color: #ffffff;
+  --card-bg: #1e1e1e;
+  --tmdb-color: #1da1f2;
+  --imdb-color: #f1c40f;
+  --badge-bg: #2a2a2a;
+}
 
-  body.light {
-    --bg-color: #f5f5f5;
-    --text-color: #121212;
-    --card-bg: #ffffff;
-    --tmdb-color: #1da1f2;
-    --imdb-color: #f1c40f;
-    --badge-bg: #e0e0e0;
-  }
+body.light {
+  --bg-color: #f5f5f5;
+  --text-color: #121212;
+  --card-bg: #ffffff;
+  --tmdb-color: #1da1f2;
+  --imdb-color: #f1c40f;
+  --badge-bg: #e0e0e0;
+}
 
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    margin: 0;
-    padding: 0;
-    transition: background-color 0.3s, color 0.3s;
-  }
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  margin: 0;
+  padding: 0;
+  transition: background-color 0.3s, color 0.3s;
+}
 
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: var(--card-bg);
-    box-shadow: 0 2px 6px rgba(0,0,0,0.5);
-    position: sticky;
-    top: 0;
-    z-index: 100;
-  }
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: var(--card-bg);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-  #toggle-mode {
-    position: absolute;
-    right: 20px;
-    cursor: pointer;
-    padding: 6px 12px;
-    border-radius: 6px;
-    border: none;
-    font-weight: bold;
-    background-color: var(--tmdb-color);
-    color: #fff;
-    transition: background-color 0.3s;
-  }
+#toggle-mode {
+  cursor: pointer;
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  font-weight: bold;
+  background-color: var(--tmdb-color);
+  color: #fff;
+  transition: background-color 0.3s;
+}
 
-  #toggle-mode:hover { background-color: #0d8ddb; }
+#toggle-mode:hover { background-color: #0d8ddb; }
 
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 20px;
+}
 
-  #header-img {
-    max-width: 400px;
-    margin-bottom: 15px;
-    border-radius: 12px;
-  }
+/* Overskrift + logo */
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin-bottom: 20px;
+}
 
-  h1 {
-    font-size: 32px;
-    margin: 10px 0 20px 0;
-    text-align: center;
-    color: var(--tmdb-color);
-  }
+.title-container img {
+  width: 60px;
+  height: auto;
+}
 
-  input {
-    width: 100%;
-    max-width: 500px;
-    padding: 12px 15px;
-    font-size: 16px;
-    border-radius: 8px;
-    border: none;
-    margin-bottom: 20px;
-    background-color: var(--card-bg);
-    color: var(--text-color);
-  }
+.title-container h1 {
+  font-size: 32px;
+  color: var(--tmdb-color);
+  margin: 0;
+}
 
-  input:focus { outline: 2px solid var(--tmdb-color); }
+input {
+  width: 100%;
+  max-width: 500px;
+  padding: 12px 15px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 20px;
+  background-color: var(--card-bg);
+  color: var(--text-color);
+}
 
-  #results {
-    width: 100%;
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 10px;
-  }
+input:focus { outline: 2px solid var(--tmdb-color); }
 
-  .movie {
-    display: flex;
-    gap: 20px;
-    align-items: flex-start;
-    background-color: var(--card-bg);
-    padding: 15px;
-    border-radius: 12px;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
+#results {
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
-  .movie:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-  }
+.movie {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+  background-color: var(--card-bg);
+  padding: 15px;
+  border-radius: 12px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
 
-  .movie img {
-    width: 100px;
-    border-radius: 8px;
-    flex-shrink: 0;
-  }
+.movie:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+}
 
-  .movie-info {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    flex-grow: 1;
-  }
+.movie img {
+  width: 100px;
+  border-radius: 8px;
+  flex-shrink: 0;
+}
 
-  .movie-info b { font-size: 20px; color: var(--tmdb-color); }
-  .movie-info p { font-size: 14px; color: #ccc; margin: 4px 0; }
+.movie-info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  flex-grow: 1;
+}
 
-  .badges { display: flex; gap: 6px; flex-wrap: wrap; }
-  .badge { background-color: var(--badge-bg); padding: 2px 6px; border-radius: 6px; font-size: 12px; color: var(--text-color); }
+.movie-info b { font-size: 20px; color: var(--tmdb-color); }
+.movie-info p { font-size: 14px; color: #ccc; margin: 4px 0; }
 
-  .id-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--badge-bg);
-    padding: 8px 12px;
-    border-radius: 8px;
-    font-size: 14px;
-    gap: 10px;
-    border: 2px solid transparent;
-  }
+.badges { display: flex; gap: 6px; flex-wrap: wrap; }
+.badge { background-color: var(--badge-bg); padding: 2px 6px; border-radius: 6px; font-size: 12px; color: var(--text-color); }
 
-  .id-box a { color: var(--text-color); text-decoration: none; font-weight: bold; }
-  .tmdb { border-color: var(--tmdb-color); }
-  .imdb { border-color: var(--imdb-color); }
+.id-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--badge-bg);
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  gap: 10px;
+  border: 2px solid transparent;
+}
 
-  .copy-btn {
-    background-color: var(--tmdb-color);
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    padding: 2px 6px;
-    font-size: 12px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
+.id-box a { color: var(--text-color); text-decoration: none; font-weight: bold; }
+.tmdb { border-color: var(--tmdb-color); }
+.imdb { border-color: var(--imdb-color); }
 
-  .copy-btn:hover { background-color: #0d8ddb; }
-  .copy-btn.copied { background-color: #2ecc71 !important; }
+.copy-btn {
+  background-color: var(--tmdb-color);
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  padding: 2px 6px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
 
-  footer {
-    margin-top: 50px;
-    width: 100%;
-    background-color: var(--card-bg);
-    padding: 30px 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-top: 2px solid #333;
-  }
+.copy-btn:hover { background-color: #0d8ddb; }
+.copy-btn.copied { background-color: #2ecc71 !important; }
 
-  footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
-  footer a { color: var(--tmdb-color); text-decoration: none; margin-top: 10px; }
-  footer a:hover { text-decoration: underline; }
+footer {
+  margin-top: 50px;
+  width: 100%;
+  background-color: var(--card-bg);
+  padding: 30px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: 2px solid #333;
+}
+
+footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
+footer a { color: var(--tmdb-color); text-decoration: none; margin-top: 10px; }
+footer a:hover { text-decoration: underline; }
 </style>
 </head>
 <body>
 
 <header>
-  <img id="header-img" src="https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true" alt="Movie ID Finder Logo">
   <button id="toggle-mode">🌙 / ☀️</button>
 </header>
 
 <main>
-  <h1>Movie ID Finder</h1>
+  <div class="title-container">
+    <img src="https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true" alt="Logo">
+    <h1>Movie ID Finder</h1>
+  </div>
+
   <input id="q" placeholder="Search for a movie">
   <div id="results"></div>
 </main>
@@ -221,7 +228,7 @@ function copyToClipboard(id, button) {
   setTimeout(() => { button.textContent = "Copy"; button.classList.remove("copied"); }, 1500);
 }
 
-// Search movies on input
+// Search movies
 q.addEventListener("input", async () => {
   results.innerHTML = "";
   if(q.value.length < 2) return;
@@ -261,6 +268,7 @@ q.addEventListener("input", async () => {
 
 </body>
 </html>
+
 
 
 </body>
