--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@ body {
   min-height: 100vh;
   transition: background-color 0.3s, color 0.3s;
 
-  /* Baggrundsbillede mindre */
+
   background-image: url("https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true");
-  background-size: 70%;      /* <-- mindre størrelse */
-  background-position: center top; /* centrér horisontalt, top vertikalt */
+  background-size: contain; /* hele billedet vises */
+  background-position: center top; /* placering */
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: fixed; /* for en pæn effekt ved scroll */
 }
 
 /* Overlay for at gøre teksten læsbar */
