--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body {
   color: var(--text-color);
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
