--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@ footer a:hover { text-decoration: underline; }
 
 <footer>
   <p>2026 Movie ID Finder.</p>
+
+  <!-- Visitor counter -->
+  <img
+    src="https://visitorbadge.io/api/visitors?path=murdervan.movie-id-finder&label=Visitors&countColor=%231da1f2"
+    alt="Visitor counter"
+    style="margin:10px 0;"
+  >
+  
   <a href="https://github.com/murdervan" target="_blank"><i class="fab fa-github"></i> Visit my GitHub</a>
 </footer>
 
