--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ footer a:hover { text-decoration: underline; }
   <p style="margin:0;">&copy; 2026 Movie ID Finder</p>
 
   <img
-    src="https://visitorbadge.io/api/visitors?path=murdervan.github.io/movie-id-finder&label=Visitors&countColor=%231da1f2"
+    src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://murdervan.github.io/movie-id-finder/&count_bg=%231DA1F2&title_bg=%232A2A2A&icon=github.svg&icon_color=%23FFFFFF&title=Visitors&edge_flat=true"
     alt="Visitor counter"
     style="height:20px;"
   >
