--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@ input:focus { outline: 2px solid var(--tmdb-color); }
 .copy-btn.copied { background-color: #2ecc71 !important; }
 
 footer {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; /* Så det ryger til ny linje på små skærme */
   margin-top: auto;
   width: 100%;
   background-color: var(--card-bg);
-  padding: 15px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
+  padding: 20px 40px;
   border-top: 2px solid #333;
-  flex-wrap: wrap;
 }
 
 footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
@@ -225,18 +225,19 @@ footer a:hover { text-decoration: underline; }
 </main>
 
 <footer>
-  <p style="margin:0;">&copy; 2026 Movie ID Finder</p>
+  <span>&copy; 2026 Movie ID Finder. All rights reserved.</span>
 
+  <!-- Visitor counter -->
   <img
-    src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://murdervan.github.io/movie-id-finder/&count_bg=%231DA1F2&title_bg=%232A2A2A&icon=github.svg&icon_color=%23FFFFFF&title=Visitors&edge_flat=true"
-    alt="Visitor counter"
-    style="height:20px;"
-  >
+    src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://murdervan.github.io/movie-id-finder/&count_bg=%231DA1F2&title_bg=%232A2A2A&title=Visitors"
+    alt="Visitor counter">
 
+  <!-- GitHub link -->
   <a href="https://github.com/murdervan" target="_blank">
     <i class="fab fa-github"></i> GitHub
   </a>
 </footer>
+
 
 <script>
 const API_KEY = "b7a512be09653a21e9b9cc99a026ae46";
