--- a/index.html
+++ b/index.html
@@ -196,12 +196,16 @@ footer {
   gap: 15px;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap; /* Så det ryger til ny linje på små skærme */
+  flex-wrap: wrap;
   margin-top: auto;
   width: 100%;
   background-color: var(--card-bg);
   padding: 20px 40px;
   border-top: 2px solid #333;
+}
+
+footer img {
+  height: 25px; /* gør visitor badge pænere */
 }
 
 footer p { margin: 2px 0; color: #ccc; text-align: center; max-width: 600px; }
@@ -225,18 +229,13 @@ footer a:hover { text-decoration: underline; }
 </main>
 
 <footer>
-  <span>&copy; 2026 Movie ID Finder. All rights reserved.</span>
-
-  <!-- Visitor counter -->
-  <img
-    src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://murdervan.github.io/movie-id-finder/&count_bg=%231DA1F2&title_bg=%232A2A2A&title=Visitors"
-    alt="Visitor counter">
-
-  <!-- GitHub link -->
-  <a href="https://github.com/murdervan" target="_blank">
-    <i class="fab fa-github"></i> GitHub
-  </a>
+  <span>&copy; 2026 Movie ID Finder.</span>
+  <img 
+    src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://murdervan.github.io/movie-id-finder/&count_bg=%231da1f2&title_bg=%232a2a2a&title=Visitors" 
+    alt="Visitor Count">
+  <a href="https://github.com/murdervan" target="_blank"><i class="fab fa-github"></i> GitHub</a>
 </footer>
+
 
 
 <script>
