--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@ q.addEventListener("input", async () => {
             <button class="copy-btn" onclick="copyToClipboard('${d.id}', this)">Copy</button>
           </div>
           ${d.imdb_id ? `<div class="id-box imdb">
-            <a href="${imdbLink}" target="_blank">IMDb ID: ${d.imdb_id}</a>
-            <button class="copy-btn" onclick="copyToClipboard('${d.imdb_id}', this)">Copy</button>
-          </div>` : ''}
+  <a href="${imdbLink}" target="_blank">IMDb ID: ${imdbClean}</a>
+  <button class="copy-btn" onclick="copyToClipboard('${imdbClean}', this)">Copy</button>
+</div>` : ''}
         </div>
       </div>
     `;
