--- a/index.html
+++ b/index.html
@@ -263,15 +263,15 @@ goTop {
   <input id="q" placeholder="Search for a movie">
   <div id="results"></div>
 </main>
-
+  
+<button id="goTop" title="Go to top">
+  <i class="fas fa-arrow-up"></i>
+</button>
+  
 <footer>
   <p>&copy; 2026 Movie ID Finder.</p>
   <a href="https://github.com/murdervan" target="_blank"><i class="fab fa-github"></i> GitHub</a>
 </footer>
-
-<button id="goTop" title="Go to top">
-  <i class="fas fa-arrow-up"></i>
-</button>
 
 
 
@@ -334,6 +334,25 @@ q.addEventListener("input", async () => {
     `;
   }
 });
+  const goTopBtn = document.getElementById("goTop");
+
+// Vis knappen når man scroller ned
+window.addEventListener("scroll", () => {
+  if (window.scrollY > 300) {
+    goTopBtn.style.display = "flex";
+  } else {
+    goTopBtn.style.display = "none";
+  }
+});
+
+// Scroll til toppen
+goTopBtn.addEventListener("click", () => {
+  window.scrollTo({
+    top: 0,
+    behavior: "smooth"
+  });
+});
+
 </script>
 
 </body>
