--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   transition: background-color 0.3s, color 0.3s;
 
   background-image: url("https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true");
-  background-size: auto;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
