--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ body {
   min-height: 100vh;
   transition: background-color 0.3s, color 0.3s;
 
-  background-image: url("https://github.com/Murdervan/movie-id-finder/blob/main/image/movie-ID-finder-logo.png?raw=true");
-  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/Murdervan/movie-id-finder/main/image/movie-ID-finder-logo.png");
+  background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
