--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 
   background-image: url("https://raw.githubusercontent.com/Murdervan/movie-id-finder/main/image/movie-ID-finder-logo.png");
   background-size: min(100%, 1920px) auto;
-  background-position: center 10%;
+  background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
