--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 
   background-image: url("https://raw.githubusercontent.com/Murdervan/movie-id-finder/main/image/movie-ID-finder-logo.png");
   background-size: cover;
-  background-position: center center;
+  background-position: center bottom;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
