--- a/index.html
+++ b/index.html
@@ -58,29 +58,6 @@ body::before {
   }
 }
 
-header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: var(--card-bg);
-  box-shadow: 0 2px 6px rgba(0,0,0,0.5);
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
-
-#toggle-mode {
-  cursor: pointer;
-  padding: 6px 12px;
-  border-radius: 6px;
-  border: none;
-  font-weight: bold;
-  background-color: var(--tmdb-color);
-  color: #fff;
-  transition: background-color 0.3s;
-}
-#toggle-mode:hover { background-color: #0d8ddb; }
 
 main {
   display: flex;
@@ -101,6 +78,12 @@ main {
   text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
 }
 
+.subtitle {
+  font-size: 18px;
+  color: #ccc;
+  margin-top: 10px;
+}  
+  
 input {
   width: 100%; max-width: 500px;
   padding: 12px 15px; font-size: 16px;
@@ -164,14 +147,12 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
 </style>
 </head>
 <body>
-
-<header>
-  <button id="toggle-mode">🌙 / ☀️</button>
-</header>
+  
 
 <main>
   <div class="title-container">
     <h1>Movie ID Finder</h1>
+    <p class="subtitle">Quickly find movies on TMDb and IMDb at the same time!</p>
   </div>
 
   <input id="q" placeholder="Search for a movie">
@@ -261,6 +242,8 @@ q.addEventListener("input", async () => {
     `;
   }
 });
+q.addEventListener("input", searchMovies);
+q.addEventListener("keypress", (e) => { if(e.key === "Enter") searchMovies(); });
 </script>
 
 </body>
